# k_yrs_go

./: .gitmodules  LICENSE  README.md  k_yrs.code-workspace  k_yrs_go.code-workspace  package-lock.json  package.json  port.sh  turbo.json
dev/: docker-compose.yml  healthz.ts  package.json
server/: .air.toml  .env  .gitignore  Cargo.toml  go.mod  go.sum  healthz.ts  main.go  package.json  server  server.sh  setup_ffi.sh
server/db/: .gitignore  db.go
server/src/: main.rs
test/: .env  package.json  psql.sh  test.ts
