[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
redis = "0.24.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
