[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.1"
actix-web = "4"
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
bb8-redis = "0.14.0"
dotenv = "0.15.0"
futures = "0.3.29"
redis = "0.24.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = "1.35.1"
tokio-postgres = "0.7.10"
yrs = "0.17.2"
